--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "license": "ISC",
     "dependencies": {
         "ejs": "^3.1.10",
-        "express": "^4.21.0"
+        "express": "^4.21.0",
+        "method-override": "^3.0.0"
     },
     "devDependencies": {
         "@types/express": "^5.0.0"
